--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "docx2pdf": "^0.0.4"
     }
 }
